--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "debug": "^3.1.0",
     "express": "^4.16.2",
     "pug": "^2.0.0",
     "uuid": "^3.1.0"
