--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "2018_1_Moved_Temporarily",
+  "name": "2018-1-Moved-Temporarily",
   "version": "0.1.0",
   "description": "Counter Strike Golang",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "collectdocu": "./node_modules/jsdoc/jsdoc.js -r --verbose client"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "pug": "^2.0.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "jsdoc": "^3.5.5"
   }
 }
