--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "2018_1_Moved Temporarily",
+  "name": "2018_1_Moved_Temporarily",
   "version": "0.1.0",
   "description": "Counter Strike golang",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "webpack && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,6 +16,10 @@
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "pug": "^2.0.0-rc.4",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "webpack": "^4.5.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^2.0.14"
   }
 }
